test/langtools/tools/javac/valhalla/values/CheckExtends.out
CheckExtends.java:8:17: compiler.err.value.may.not.extend
1 error
